feat: add test:affected and test:smart scripts for tiered test execution (#228)
* feat: add test:affected and test:smart scripts for tiered test execution

Implements David's request for optimized test execution with a 3-tier strategy:

- test:affected: Uses Vitest's built-in `related` command with Vite's module
  graph to find tests that transitively import any file changed in the current
  branch. Fastest option (~10-30s) for quick iteration feedback.

- test:smart: Extends affected with heuristic discovery strategies:
  1. Co-located tests (foo.ts → foo.test.ts)
  2. Directory proximity (changed src/cron/state.ts → all src/cron/**/*.test.ts)
  3. Index/barrel file fan-out for re-export changes
  4. Vitest related module graph analysis

Both scripts:
- Compare against main by default (--base to override)
- Accept --extra files for agent-specified additions
- Run unit+extensions in parallel, gateway serial (matches test-parallel.mjs)
- Support --verbose and --discovery-only (smart only) modes
- Use --passWithNoTests to never fail when no tests match

Agent workflow: iterate with test:affected → finish with test (exhaustive)
Expected ~90%% reduction in test time during iteration phases.

* fix: windows fixes

--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "setup-completion": "node scripts/setup-completion.js",
     "start": "node scripts/run-node.mjs",
     "test": "node scripts/test-parallel.mjs",
+    "test:affected": "node scripts/test-affected.mjs",
     "test:all": "pnpm lint && pnpm build && pnpm test && pnpm test:e2e && pnpm test:live && pnpm test:docker:all",
     "test:coverage": "vitest run --coverage",
     "test:docker:all": "pnpm test:docker:live-models && pnpm test:docker:live-gateway && pnpm test:docker:onboard && pnpm test:docker:gateway-network && pnpm test:docker:qr && pnpm test:docker:doctor-switch && pnpm test:docker:plugins && pnpm test:docker:cleanup",
@@ -100,6 +101,7 @@
     "test:install:e2e:openai": "OPENCLAW_E2E_MODELS=openai CLAWDBOT_E2E_MODELS=openai bash scripts/test-install-sh-e2e-docker.sh",
     "test:install:smoke": "bash scripts/test-install-sh-docker.sh",
     "test:live": "OPENCLAW_LIVE_TEST=1 CLAWDBOT_LIVE_TEST=1 vitest run --config vitest.live.config.ts",
+    "test:smart": "node scripts/test-smart.mjs",
     "test:ui": "pnpm --dir ui test",
     "test:view-logs": "bash scripts/view-test-logs.sh",
     "test:watch": "vitest",
