notion and meridia integration (#395)

--- a/docs/experiential-engine/hooks/hook-config.json
+++ b/docs/experiential-engine/hooks/hook-config.json
@@ -39,16 +39,14 @@
         }
       },
       "load": {
-        "extraDirs": [
-          "~/.openclaw/existence/hooks"
-        ]
+        "extraDirs": ["~/.openclaw/existence/hooks"]
       }
     }
   },
 
   "experiential": {
     "enabled": true,
-    
+
     "local_model": {
       "endpoint": "http://localhost:8000/v1",
       "evaluation_model": "Qwen/Qwen2.5-7B-Instruct",
