feat(web): add Playwright test mode to bypass auth guards
* worker fixes

* feat(web): add Playwright test mode to bypass auth guards

- Add VITE_PLAYWRIGHT_TEST_MODE env var to disable all auth
- Create isPlaywrightTestMode() utility in src/lib/test-mode.ts
- Bypass GatewayAuthGuard, OnboardingGuard, UnlockGuard in test mode
- SecurityProvider returns always-unlocked state in test mode
- Skip gateway auto-connect in test mode (main.tsx)
- Root layout renders with AppShell but skips all guard wrappers
- Add visual '🎭 Playwright Test Mode' banner when active
- Add dev:test and dev:playwright npm scripts
- Add .env.playwright config file

Usage:
  pnpm dev:playwright
  # or
  VITE_PLAYWRIGHT_TEST_MODE=true pnpm dev

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,7 +16,9 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
-    "clean": "rm -rf dist node_modules/.vite"
+    "clean": "rm -rf dist node_modules/.vite",
+    "dev:test": "VITE_PLAYWRIGHT_TEST_MODE=true vite",
+    "dev:playwright": "VITE_PLAYWRIGHT_TEST_MODE=true vite"
   },
   "dependencies": {
     "@clawdbrain/vercel-ai-agent": "workspace:*",
