--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -212,6 +212,10 @@
   - changed-files:
       - any-glob-to-any-file:
           - "extensions/google-gemini-cli-auth/**"
+"extensions: issue-tracking":
+  - changed-files:
+      - any-glob-to-any-file:
+          - "extensions/issue-tracking/**"
 "extensions: llm-task":
   - changed-files:
       - any-glob-to-any-file:
