feat: command for LiteLLM-generated model config/costs/etc

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ ui/src/ui/__screenshots__/
 ui/playwright-report/
 ui/test-results/
 
+# Generated model data files (run pnpm generate:models to recreate)
+generated/
+
 # Mise configuration files
 mise.toml
 
