--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -49,11 +49,14 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.29.2",
+    "i18next": "^25.8.13",
+    "i18next-browser-languagedetector": "^8.2.1",
     "immer": "^11.1.3",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.1",
+    "react-i18next": "^16.5.4",
     "reagraph": "^4.30.5",
     "rollup": "^4.58.0",
     "sonner": "^2.0.7",
